tests/badcalibrate.out
./badcalibrate.svx:4:24: error: Scale factor must be non-zero
 *calibrate compass 1.0 000
                        ^~~
./badcalibrate.svx:5:33: error: Scale factor must be non-zero
 *calibrate clino backclino -0.5 0.0
                                 ^~~
./badcalibrate.svx:6:19: error: Scale factor must be non-zero
 *calibrate tape 0 0
                   ^
./badcalibrate.svx:8: error: Can't calibrate angular and length quantities together
 *calibrate tape compass 1 1

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m

There were 0 warning(s) and 4 error(s) - no output files produced.
